# domru

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker.yml
public/: index.html
src/: client.rs  error.rs  main.rs  sip.rs  state.rs  types.rs
src/api/: auth.rs  config.rs  door.rs  media.rs  mod.rs  places.rs  sse.rs
