[package]
name = "domofon"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
base64 = "0.22"
rand = "0.8"
bytes = "1"
urlencoding = "2"
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level = "z"
lto = true
strip = "debuginfo"
codegen-units = 1
